waltid-wallet-api/k8s/deployment-pwa.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-api
  template:
    metadata:
      labels:
        app: wallet-api
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: wallet-api
          image: waltid/wallet-api
          volumeMounts:
            - name: wallet-db-config
              mountPath: "/waltid-wallet-api/config/db.conf"
              subPath: "db.conf"
              readOnly: true
            - name: wallet-datasource-config
              mountPath: "/waltid-wallet-api/config/db.sqlite.conf"
              subPath: "db.sqlite.conf"
              readOnly: true
            - name: wallet-wallet-config
              mountPath: "/waltid-wallet-api/config/wallet.conf"
              subPath: "wallet.conf"
              readOnly: true
            - name: wallet-web-config
              mountPath: "/waltid-wallet-api/config/web.conf"
              subPath: "web.conf"
              readOnly: true
            - name: wallet-oidc-config
              mountPath: "/waltid-wallet-api/config/oidc.conf"
              subPath: "oidc.conf"
              readOnly: true
            - name: wallet-marketplace-config
              mountPath: "/waltid-wallet-api/config/marketplace.conf"
              subPath: "marketplace.conf"
              readOnly: true
            - name: wallet-chainexplorer-config
              mountPath: "/waltid-wallet-api/config/chainexplorer.conf"
              subPath: "chainexplorer.conf"
              readOnly: true
            - name: wallet-rejection-reason-config
              mountPath: "/waltid-wallet-api/config/rejectionreason.conf"
              subPath: "rejectionreason.conf"
              readOnly: true
            # - name: wallet-push-config
            #   mountPath: "/waltid-wallet-api/config/push.conf"
            #   subPath: "push.conf"
            #   readOnly: true
            - name: wallet-trust-config
              mountPath: "/waltid-wallet-api/config/trust.conf"
              subPath: "trust.conf"
              readOnly: true
            - name: wallet-logins-config
              mountPath: "/waltid-wallet-api/config/logins.conf"
              subPath: "logins.conf"
              readOnly: true
            - name: wallet-auth-secret
              mountPath: "/waltid-wallet-api/config/auth.conf"
              subPath: "auth.conf"
              readOnly: true
#            - name: wallet-oci-rest-api-secret
#              mountPath: "/waltid-wallet-api/config/oci-rest-api.conf"
#              subPath: "oci-rest-api.conf"
#              readOnly: true
            # - name: wallet-nft-config
            #   mountPath: "/waltid-wallet-api/walt.yaml"
            #   subPath: "walt.yaml"
            #   readOnly: true
            - mountPath: "/waltid-wallet-api/data/"
              name: wallet-data
          ports:
            - containerPort: 4545
              name: http-api
      volumes:
        - name: wallet-db-config
          configMap:
            name: wallet-db-config
        - name: wallet-datasource-config
          configMap:
            name: wallet-datasource-config
        - name: wallet-wallet-config
          configMap:
            name: wallet-wallet-config
        - name: wallet-web-config
          configMap:
            name: wallet-web-config
        - name: wallet-oidc-config
          configMap:
            name: wallet-oidc-config
        - name: wallet-marketplace-config
          configMap:
            name: wallet-marketplace-config
        - name: wallet-chainexplorer-config
          configMap:
            name: wallet-chainexplorer-config
        - name: wallet-rejection-reason-config
          configMap:
            name: wallet-rejection-reason-config
        - name: wallet-trust-config
          configMap:
            name: wallet-trust-config
        - name: wallet-logins-config
          configMap:
            name: wallet-logins-config
        - name: wallet-auth-secret
          secret:
            secretName: wallet-auth-secret
#        - name: wallet-oci-rest-api-secret
#          secret:
#            secretName: wallet-oci-rest-api-secret
        # - name: wallet-push-config
        #   secret:
        #     secretName: wallet-push-config-secret
        # - name: wallet-nft-config
        #   secret:
        #     secretName: wallet-nft-config-secret
        - name: wallet-data
          persistentVolumeClaim:
            claimName: wallet-data-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: wallet-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: wallet-api
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: uae-pwa-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uae-pwa-wallet
  template:
    metadata:
      labels:
        app: uae-pwa-wallet
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: uae-pwa-wallet
          image: waltid/uae-pwa-wallet
          ports:
            - containerPort: 7101
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: uae-pwa-wallet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: uae-pwa-wallet
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wallet-uae.demo.walt.id
      secretName: wallet-tls-secret
  rules:
    - host: wallet-uae.demo.walt.id
      http:
        paths:
          - path: /wallet-api/
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: wallet-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uae-pwa-wallet
                port:
                  name: http
